welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: not found: value vacance
	if (weekday==true && vacance==false){
                             ^